--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
         android:orientation="horizontal"
         android:layout_marginTop="10dp">
         <TextView
+            android:id="@+id/tv_classic"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -66,6 +67,7 @@
             android:gravity="center"
             android:textColor="@color/colorPrimary"/>
         <TextView
+            android:id="@+id/tv_advanced"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
